--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   }
 
 
-  #suggestionsList {
+/*   #suggestionsList {
     list-style-type: none; 
     padding: 0; 
     margin: 0; 
@@ -22,6 +22,6 @@
     font-size: 14px; 
     color: #333; 
     margin-top: 10px; 
-}
+} */
 
   
