--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,13 @@
   }
 
 
-/*   #suggestionsList {
+  #suggestionsList {
     list-style-type: none; 
     padding: 0; 
     margin: 0; 
 }
 
+/* 
 #suggestionsList div {
     background-color: white; 
     border: 1px solid #ddd; 
