--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     margin: 0; 
 }
 
-/* 
+
 #suggestionsList div {
     background-color: white; 
     border: 1px solid #ddd; 
@@ -23,6 +23,6 @@
     font-size: 14px; 
     color: #333; 
     margin-top: 10px; 
-} */
+}
 
   
