--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 
-#suggestionsList div {
+/* #suggestionsList div {
     background-color: white; 
     border: 1px solid #ddd; 
     border-radius: 4px; 
@@ -24,5 +24,5 @@
     color: #333; 
     margin-top: 1px; 
 }
-
+ */
   
