--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@
     border: 2px solid black;    
   }
 
-
+/* 
   #suggestionsList {
     list-style-type: none; 
     padding: 0; 
     margin: 0; 
 }
-
+ */
 
 /* #suggestionsList div {
     background-color: white; 
